[CI] Helm Chart Update kubernetes-dashboard

--- a/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/templates/config/gateway.yaml
+++ b/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/templates/config/gateway.yaml
@@ -19,6 +19,8 @@ kind: ConfigMap
 metadata:
   labels:
     {{- include "kubernetes-dashboard.labels" . | nindent 4 }}
+  annotations:
+    {{- include "kubernetes-dashboard.annotations" . | nindent 4 }}
   name: {{ .Values.kong.dblessConfig.configMap }}
 data:
   kong.yml: |
