--- a/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/templates/networking/ingress.yaml
+++ b/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/templates/networking/ingress.yaml
@@ -24,6 +24,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
     {{- end }}
   annotations:
+    {{- include "kubernetes-dashboard.annotations" . | nindent 4 }}
     {{- if eq .Values.app.ingress.issuer.scope "default" }}
     cert-manager.io/issuer: {{ .Values.app.ingress.issuer.name }}
     {{- end }}
