--- a/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/values.yaml
+++ b/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/values.yaml
@@ -76,12 +76,19 @@ app:
     #  clusterName: ""
     #  # Max number of items that can be displayed on each list page
     #  itemsPerPage: 10
+    #  # Max number of labels that are displayed by default on most views.
+    #  labelsLimit: 3
     #  # Number of seconds between every auto-refresh of logs
     #  logsAutoRefreshTimeInterval: 5
     #  # Number of seconds between every auto-refresh of every resource. Set 0 to disable
-    #  resourceAutoRefreshTimeInterval: 5
+    #  resourceAutoRefreshTimeInterval: 10
     #  # Hide all access denied warnings in the notification panel
     #  disableAccessDeniedNotifications: false
+    #  # Namespace that should be selected by default after logging in.
+    #  defaultNamespace: default
+    #  # List of namespaces that should be presented to user without namespace list privileges.
+    #  namespaceFallbackList:
+    #  - default
     ## Pinned resources that will be displayed in dashboard's menu
     pinnedResources: []
     # - kind: customresourcedefinition
@@ -164,9 +171,11 @@ auth:
     - name: tmp-volume
       emptyDir: {}
   nodeSelector: {}
-  # Labels & annotations shared between API related resources
+  # Labels & annotations for Auth related resources
   labels: {}
   annotations: {}
+  serviceLabels: {}
+  serviceAnnotations: {}
 
 # API deployment configuration
 api:
@@ -219,9 +228,11 @@ api:
     - name: tmp-volume
       emptyDir: {}
   nodeSelector: {}
-  # Labels & annotations shared between API related resources
+  # Labels & annotations for API related resources
   labels: {}
   annotations: {}
+  serviceLabels: {}
+  serviceAnnotations: {}
 
 # WEB UI deployment configuration
 web:
@@ -274,9 +285,11 @@ web:
     - name: tmp-volume
       emptyDir: {}
   nodeSelector: {}
-  # Labels & annotations shared between WEB UI related resources
+  # Labels & annotations for WEB UI related resources
   labels: {}
   annotations: {}
+  serviceLabels: {}
+  serviceAnnotations: {}
 
 ### Metrics Scraper
 ### Container to scrape, store, and retrieve a window of time from the Metrics Server.
@@ -333,9 +346,11 @@ metricsScraper:
     - name: tmp-volume
       emptyDir: {}
   nodeSelector: {}
-  # Labels & annotations shared between WEB UI related resources
+  # Labels & annotations for Metrics Scraper related resources
   labels: {}
   annotations: {}
+  serviceLabels: {}
+  serviceAnnotations: {}
 
 ## Optional Metrics Server sub-chart configuration
 ## Enable this if you don't already have metrics-server enabled on your cluster and
@@ -359,6 +374,8 @@ kong:
     plugins: 'off'
     nginx_worker_processes: 1
   ingressController:
+    enabled: false
+  manager:
     enabled: false
   dblessConfig:
     configMap: kong-dbless-config
