--- a/argocd-helm-charts/rook-ceph/charts/rook-ceph/values.yaml
+++ b/argocd-helm-charts/rook-ceph/charts/rook-ceph/values.yaml
@@ -6,8 +6,8 @@ image:
   # -- Image
   repository: docker.io/rook/ceph
   # -- Image tag
-  # @default -- `v1.15.2`
-  tag: v1.15.2
+  # @default -- `v1.15.3`
+  tag: v1.15.3
   # -- Image pull policy
   pullPolicy: IfNotPresent
 
@@ -633,8 +633,14 @@ discover:
 # -- Runs Ceph Pods as privileged to be able to write to `hostPaths` in OpenShift with SELinux restrictions.
 hostpathRequiresPrivileged: false
 
+# -- Whether to create all Rook pods to run on the host network, for example in environments where a CNI is not enabled
+enforceHostNetwork: false
+
 # -- Disable automatic orchestration when new devices are discovered.
 disableDeviceHotplug: false
+
+# -- The revision history limit for all pods created by Rook. If blank, the K8s default is 10.
+revisionHistoryLimit:
 
 # -- Blacklist certain disks according to the regex provided.
 discoverDaemonUdev:
