--- a/argocd-helm-charts/sonarqube/charts/sonarqube/values.yaml
+++ b/argocd-helm-charts/sonarqube/charts/sonarqube/values.yaml
@@ -21,29 +21,51 @@ deploymentStrategy: {}
 ##
 # schedulerName:
 
-## Is this deployment for OpenShift? If so, we help with SCCs
+## OpenShift specific configuration
 OpenShift:
   enabled: false
-  createSCC: true
+  # (Deprecated) this parameter should not be needed anymore, we support Openshift SCCv2 by default when Openshift.enabled=true
+  createSCC: false
+  route:
+    enabled: false
+    host: "sonarqube.your-org.com"
+    path: "/"
+    # Add tls section to secure traffic.
+    tls:
+      termination: edge
+      # certificate:
+      # key:
+      # caCertificate:
+      # insecureEdgeTerminationPolicy: Redirect
+    wildcardPolicy: None
+    annotations: {}
+    # See Openshift/OKD route annotation
+    # https://docs.openshift.com/container-platform/4.10/networking/routes/route-configuration.html#nw-route-specific-annotations_route-configuration
+    # haproxy.router.openshift.io/timeout: 1m
+    # Additional labels for Route manifest file
+    # labels:
+    #  external: 'true'
 
 edition: "community"
 
 image:
   repository: sonarqube
-  tag: 10.6.0-{{ .Values.edition }}
+  tag: 10.7.0-{{ .Values.edition }}
   pullPolicy: IfNotPresent
   # If using a private repository, the imagePullSecrets to use
   # pullSecrets:
   #   - name: my-repo-secret
 
-# Set security context for sonarqube pod
+# Set security context for sonarqube pod.
+# The current section contains the default values set in a generic Kubernetes cluster. If you are using OpenShift, you should not set any specific fsGroup.
 securityContext:
   fsGroup: 0
 
-# Set security context for sonarqube container
+# Set security context for sonarqube container.
+# The current section contains the default values set in a generic Kubernetes cluster. If you are using OpenShift, you should not set any specific UID or GID to be used for the execution.
 containerSecurityContext:
-  # Sonarqube dockerfile creates sonarqube user as UID and GID 0
-  # Those default are used to match pod security standard restricted as least privileged approach
+# Sonarqube dockerfile creates sonarqube user as UID and GID 0
+# Those default are used to match pod security standard restricted as least privileged approach
   allowPrivilegeEscalation: false
   runAsNonRoot: true
   runAsUser: 1000
@@ -52,6 +74,7 @@ containerSecurityContext:
     type: RuntimeDefault
   capabilities:
     drop: ["ALL"]
+#   readOnlyRootFilesystem: true
 
 # Settings to configure elasticsearch host requirements
 elasticsearch:
@@ -71,6 +94,14 @@ service:
   #   - 0.0.0.0/0
   # loadBalancerIP: 1.2.3.4
 
+# Those proxy settings will be propagated to the install-plugin and prometheus-exporter init containers
+# if httpProxySecret is set the other one will be ignored
+# the secret should contain exactly the keys http_proxy, https_proxy and no_proxy
+httpProxySecret: ""
+httpProxy: ""
+httpsProxy: ""
+noProxy: ""
+
 # Optionally create Network Policies
 networkPolicy:
   enabled: false
@@ -80,8 +111,10 @@ networkPolicy:
 
   # If you are using a external database and enable network Policies to be created
   # you will need to explicitly allow egress traffic to your database
-  # expects https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#networkpolicyspec-v1-networking-k8s-io
+  # (DEPRECATED) please use additionalNetworkPolicies instead
   # additionalNetworkPolicys:
+  # expects https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#networkpolicyspec-v1-networking-k8s-io
+  # additionalNetworkPolicies:
 
 # will be used as default for ingress path and probes path, will be injected in .Values.env as SONAR_WEB_CONTEXT
 # if .Values.env.SONAR_WEB_CONTEXT is set, this value will be ignored
@@ -98,6 +131,23 @@ ingress-nginx:
   # You can add here any values from the official nginx ingress chart
   # controller:
   #   replicaCount: 3
+
+httproute:
+  enabled: false
+  # gateway: my-gateway
+  # labels:
+  #   somelabel: somevalue
+  # hostnames:
+  #   - sonarqube.your-org.com
+  # The rules are optional, by default we will create one with the SonarWebContext prefix and the SonarQube service values
+  # rules:
+  # - matches:
+  #   - path:
+  #       type: PathPrefix
+  #       value: /bar
+  #   backendRefs:
+  #   - name: my-service1
+  #     port: 8080
 
 ingress:
   enabled: false
@@ -126,23 +176,6 @@ ingress:
   # - secretName: chart-example-tls
   #   hosts:
   #     - chart-example.local
-
-route:
-  enabled: false
-  host: ""
-  # Add tls section to secure traffic. TODO: extend this section with other secure route settings
-  # Comment this out if you want plain http route created.
-  tls:
-    termination: edge
-
-  annotations: {}
-  # See Openshift/OKD route annotation
-  # https://docs.openshift.com/container-platform/4.10/networking/routes/route-configuration.html#nw-route-specific-annotations_route-configuration
-  # haproxy.router.openshift.io/timeout: 1m
-
-  # Additional labels for Route manifest file
-  # labels:
-  #  external: 'true'
 
 # Affinity for pod assignment
 # Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
@@ -226,6 +259,8 @@ startupProbe:
 
 initContainers:
   # image: busybox:1.36
+  # Set the security context for the init containers
+  # The current section contains the default values set in a generic Kubernetes cluster. If you are using OpenShift, you should not set any specific UID or GID to be used for the execution.
   # We allow the init containers to have a separate security context declaration because
   # the initContainer may not require the same as SonarQube.
   # Those default are used to match pod security standard restricted as least privileged approach
@@ -238,6 +273,7 @@ initContainers:
       type: RuntimeDefault
     capabilities:
       drop: ["ALL"]
+    readOnlyRootFilesystem: true
   # We allow the init containers to have a separate resources declaration because
   # the initContainer does not take as much resources.
   resources: {}
@@ -253,14 +289,22 @@ extraInitContainers: {}
 ##   command: ['sh', '-c', 'echo Hello && sleep 3600']
 ##
 extraContainers: []
+extraVolumes: []
+extraVolumeMounts: []
 
 ## Provide a secret containing one or more certificate files in the keys that will be added to cacerts
 ## The cacerts file will be set via SONARQUBE_WEB_JVM_OPTS and SONAR_CE_JAVAOPTS
 ##
 caCerts:
   enabled: false
-  image: adoptopenjdk/openjdk11:alpine
-  secret: your-secret
+  # image:
+  # secret: your-secret-name
+
+  # Optionally, you can store your certificate in a ConfigMap and use it as:
+  # configMap:
+  #   name: my-custom-cacerts-certificate
+  #   key: key
+  #   path: my-certificate.crt
 
 initSysctl:
   enabled: true
@@ -274,6 +318,7 @@ initSysctl:
     privileged: true
     # if run without root permissions, error "sysctl: permission denied on key xxx, ignoring"
     runAsUser: 0
+    readOnlyRootFilesystem: true
   # resources: {}
 
 # This should not be required anymore, used to chown/chmod folder created by faulty CSI driver that are not applying properly POSIX fsgroup.
@@ -291,6 +336,7 @@ initFs:
     capabilities:
       drop: ["ALL"]
       add: ["CHOWN"]
+    readOnlyRootFilesystem: true
 
 prometheusExporter:
   enabled: false
@@ -335,6 +381,8 @@ prometheusMonitoring:
     # scrapeTimeout: ""
     # Name of the label on target services that prometheus uses as job name
     # jobLabel: ""
+    # Additional labels to add to the PodMonitor
+    # labels: {}
 
 # List of plugins to install.
 # For example:
@@ -422,8 +470,10 @@ persistence:
   uid: 1000
   guid: 0
 
+  ## DEPRECATED please use root level extraVolumes value
   ## Specify extra volumes. Refer to ".spec.volumes" specification : https://kubernetes.io/fr/docs/concepts/storage/volumes/
   volumes: []
+  ## DEPRECATED please use root level extraVolumeMounts value
   ## Specify extra mounts. Refer to ".spec.containers.volumeMounts" specification : https://kubernetes.io/fr/docs/concepts/storage/volumes/
   mounts: []
 
@@ -451,10 +501,12 @@ emptyDir: {}
 ## Override JDBC values
 ## for external Databases
 jdbcOverwrite:
+  # (DEPRECATED) Please use jdbcOverwrite.enabled instead
+  # enable: false
   # If enable the JDBC Overwrite, make sure to set `postgresql.enabled=false`
-  enable: false
+  enabled: false
   # The JDBC url of the external DB
-  jdbcUrl: "jdbc:postgresql://myPostgress/myDatabase?socketTimeout=1500"
+  jdbcUrl: "jdbc:postgresql://myPostgress/myDatabase"
   # The DB user that should be used for the JDBC connection
   jdbcUsername: "sonarUser"
   # Use this if you don't mind the DB password getting stored in plain text within the values file
@@ -504,15 +556,11 @@ postgresql:
     size: 20Gi
     storageClass:
   securityContext:
-    # For standard Kubernetes deployment, set enabled=true
-    # If using OpenShift, enabled=false for restricted SCC and enabled=true for anyuid/nonroot SCC
     enabled: true
     # fsGroup specification below are not applied if enabled=false. enabled=false is the required setting for OpenShift "restricted SCC" to work successfully.
     # postgresql dockerfile sets user as 1001
     fsGroup: 1001
   containerSecurityContext:
-    # For standard Kubernetes deployment, set enabled=true
-    # If using OpenShift, enabled=false for restricted SCC and enabled=true for anyuid/nonroot SCC
     enabled: true
     # runAsUser specification below are not applied if enabled=false. enabled=false is the required setting for OpenShift "restricted SCC" to work successfully.
     # postgresql dockerfile sets user as 1001, the rest aim at making it compatible with restricted pod security standard.
@@ -524,8 +572,6 @@ postgresql:
     capabilities:
       drop: ["ALL"]
   volumePermissions:
-    # For standard Kubernetes deployment, set enabled=false
-    # For OpenShift, set enabled=true and ensure to set volumepermissions.securitycontext.runAsUser below.
     enabled: false
     # if using restricted SCC set runAsUser: "auto" and if running under anyuid/nonroot SCC - runAsUser needs to match runAsUser above
     securityContext:
@@ -597,8 +643,8 @@ extraConfig:
 # The above values can be also provided by a secret that contains "password" and "currentPassword" as keys. You can generate such a secret in your cluster
 # using "kubectl create secret generic admin-password-secret-name --from-literal=password=admin --from-literal=currentPassword=admin"
 #   adminPasswordSecretName: ""
-# # Reuse default initcontainers.securityContext that match restricted pod security standard
-# #   securityContext: {}
+# Reuse default initcontainers.securityContext that match restricted pod security standard
+#   securityContext: {}
 #   resources:
 #     limits:
 #       cpu: 100m
