--- a/argocd-helm-charts/sonarqube/charts/sonarqube/Chart.yaml
+++ b/argocd-helm-charts/sonarqube/charts/sonarqube/Chart.yaml
@@ -1,22 +1,71 @@
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "Update Chart's version to 10.6.1"
-    - kind: fixed
-      description: "Fix typo in the new STS template"
+      description: "Update Chart's version to 10.7.0"
+    - kind: changed
+      description: "Upgrade SonarQube to 10.7.0"
+    - kind: changed
+      description: "Support Kubernetes v1.30"
+    - kind: changed
+      description: "Upgrade ingress-nginx dependency to 4.10.1"
+    - kind: changed
+      description: "Deprecate `jdbcOverwrite.enable` in favor of `jdbcOverwrite.enabled`"
     - kind: fixed
       description: "Fix regression on env valuesFrom in the new STS template"
+    - kind: fixed
+      description: "Fix a typo in the new common STS template"
+    - kind: changed
+      description: "Enable the setup of ReadOnlyRootFilesystem in the security contexts"
+    - kind: added
+      description: "Support basic chart installation on Openshift"
+    - kind: changed
+      description: "Include remaining Route settings"
+    - kind: changed
+      description: "Fix networkPolicy.additionalPolicys typo"
+    - kind: added
+      description: "Support install-plugin and prometheusExporter proxy variables in secret"
+    - kind: added
+      description: "Support GatewayAPI HttpRoute"
+    - kind: added
+      description: "Support additional labels in the PodMonitor"
+    - kind: added
+      description: "Support Openshift SCCv2 by default when Openshift.enabled=true"
+    - kind: changed
+      description: "Deprecate Openshift.createSCC"
+    - kind: added
+      description: "Support additional CA Certificate as ConfigMap instead of Secret only"
+    - kind: changed
+      description: "Changed default value for caCerts.image"
+    - kind: fixed
+      description: "Fix openshift change-admin-password-hook Job SecurityContext failure"
+    - kind: added
+      description: "Support SONAR_OPENSHIFT telemetry env_var"
+    - kind: changed
+      description: "Update helm chart repo path in sources"
+    - kind: changed
+      description: "Changed SONAR_OPENSHIFT to IS_HELM_OPENSHIFT_ENABLED"
+    - kind: changed
+      description: "Remove socketTimeout from jdbcOverwrite.jdbcUrl's default value"
+    - kind: changed
+      description: "Refactor Route to be subparameter of OpenShift"
+    - kind: changed
+      description: "Make OpenShift.createSCC false by default"
+    - kind: changed
+      description: "Deprecate peristence.volumes and persistence.mounts in favor or extraVolumes and extraVolumeMounts"
+    - kind: added
+      description: "Ensure kubernetes.io/version label is smaller than 63 chars"
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/images: |
     - name: sonarqube
-      image: sonarqube:10.6.0-community
+      image: sonarqube:10.7.0-community
   artifacthub.io/links: |
     - name: support
       url: https://community.sonarsource.com/
     - name: Chart Source
       url: https://github.com/SonarSource/helm-chart-sonarqube/tree/master/charts/sonarqube
+  charts.openshift.io/name: sonarqube
 apiVersion: v2
-appVersion: 10.6.0
+appVersion: 10.7.0
 dependencies:
 - condition: postgresql.enabled
   name: postgresql
@@ -25,7 +74,7 @@ dependencies:
 - condition: nginx.enabled,ingress-nginx.enabled
   name: ingress-nginx
   repository: https://kubernetes.github.io/ingress-nginx
-  version: 4.9.1
+  version: 4.10.1
 description: SonarQube is a self-managed, automatic code review tool that systematically
   helps you deliver clean code. As a core element of our Sonar solution, SonarQube
   integrates into your existing workflow and detects issues in your code to help you
@@ -51,8 +100,8 @@ maintainers:
   name: davividal
 name: sonarqube
 sources:
-- https://github.com/SonarSource/helm-chart-sonarqube
+- https://github.com/SonarSource/helm-chart-sonarqube/tree/master/charts/sonarqube
 - https://github.com/SonarSource/docker-sonarqube
 - https://github.com/SonarSource/sonarqube
 type: application
-version: 10.6.1+3163
+version: 10.7.0+3598
