Added a template for postgress pdb

--- a/argocd-helm-charts/keycloakx/templates/postgresql-cnpg.yaml
+++ b/argocd-helm-charts/keycloakx/templates/postgresql-cnpg.yaml
@@ -19,6 +19,7 @@ spec:
       database: keycloak
       owner: keycloak
   {{ end }}
+  enablePDB: {{ ((.Values.cnpg).enablePDB) | default false }}
   resources:
     limits:
       memory: {{ (((.Values.cnpg).resources).limits).memory | default "800Mi" }}
