add/renamed the references and links to kubeaid

--- a/argocd-helm-charts/argo-cd/examples/basic_values.yaml
+++ b/argocd-helm-charts/argo-cd/examples/basic_values.yaml
@@ -26,20 +26,20 @@ argo-cd:
         requestedScopes: ["openid", "profile", "email", "groups"]
       repositories:
         - type: git
-          url: https://gitlab.com/kubernetes/k8id.git
+          url: https://gitlab.com/kubernetes/kubeaid.git
           usernameSecret:
-            name: k8id-argocd
+            name: kubeaid-argocd
             key: username
           passwordSecret:
-            name: k8id-argocd
+            name: kubeaid-argocd
             key: password
         - type: git
           url: https://gitlab.com/kubernetes/kubernetes-config-enableit.git
           usernameSecret:
-            name: k8id-config-argocd
+            name: kubeaid-config-argocd
             key: username
           passwordSecret:
-            name: k8id-config-argocd
+            name: kubeaid-config-argocd
             key: password
     ingress:
       enabled: true
