--- a/argocd-helm-charts/cluster-api/charts/cluster-api-operator/templates/deployment.yaml
+++ b/argocd-helm-charts/cluster-api/charts/cluster-api-operator/templates/deployment.yaml
@@ -74,6 +74,9 @@ spec:
         {{- if .Values.insecureDiagnostics }}
         - --insecure-diagnostics={{ .Values.insecureDiagnostics }}
         {{- end }}
+        {{- if .Values.watchConfigSecret }}
+        - --watch-configsecret
+        {{- end }}
         {{- with .Values.leaderElection }}
         - --leader-elect={{ .enabled }}
         {{- if .leaseDuration }}
