--- a/argocd-helm-charts/cluster-api/charts/cluster-api-operator/values.yaml
+++ b/argocd-helm-charts/cluster-api/charts/cluster-api-operator/values.yaml
@@ -19,7 +19,7 @@ leaderElection:
 image:
   manager:
     repository: registry.k8s.io/capi-operator/cluster-api-operator
-    tag: v0.13.0
+    tag: v0.14.0
     pullPolicy: IfNotPresent
 env:
   manager: []
@@ -27,6 +27,7 @@ healthAddr: ":8081"
 metricsBindAddr: "127.0.0.1:8080"
 diagnosticsAddress: "8443"
 insecureDiagnostics: false
+watchConfigSecret: false
 imagePullSecrets: {}
 resources:
   manager:
