[CI] Helm Chart Update mariadb-operator

--- a/argocd-helm-charts/mariadb-operator/charts/mariadb-operator/values.yaml
+++ b/argocd-helm-charts/mariadb-operator/charts/mariadb-operator/values.yaml
@@ -26,7 +26,8 @@ clusterName: cluster.local
 currentNamespaceOnly: false
 
 ha:
-  # -- Enable high availability
+  # -- Enable high availability of the controller.
+  # If you enable it we recommend to set `affinity` and `pdb`
   enabled: false
   # -- Number of replicas
   replicas: 3
@@ -105,6 +106,27 @@ tolerations: []
 
 # -- Affinity to add to controller Pod
 affinity: {}
+  #  Sample on how to create an antiAffinity rule that place
+  #  the pods on different nodes, to be used together with `ha.enabled: true`
+  # podAntiAffinity:
+  #   requiredDuringSchedulingIgnoredDuringExecution:
+  #   - labelSelector:
+  #       matchExpressions:
+  #       - key: app.kubernetes.io/name
+  #         operator: In
+  #         values:
+  #         - mariadb-operator
+  #       - key: app.kubernetes.io/instance
+  #         operator: In
+  #         values:
+  #         - mariadb-operator
+  #     topologyKey: kubernetes.io/hostname
+
+pdb:
+  # -- Enable PodDisruptionBudget for the controller.
+  enabled: false
+  # -- Maximum number of unavailable Pods. You may also give a percentage, like `50%`
+  maxUnavailable: 1
 
 webhook:
   # -- Specifies whether the webhook should be created.
