--- a/argocd-helm-charts/mariadb-operator/charts/mariadb-operator/Chart.yaml
+++ b/argocd-helm-charts/mariadb-operator/charts/mariadb-operator/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
-appVersion: v0.0.33
+appVersion: 0.34.0
 dependencies:
 - condition: crds.enabled
   name: mariadb-operator-crds
   repository: file://../mariadb-operator-crds
-  version: 0.0.33
+  version: 0.34.0
 description: Run and operate MariaDB in a cloud native way
 home: https://github.com/mariadb-operator/mariadb-operator
 icon: https://mariadb-operator.github.io/mariadb-operator/assets/mariadb_profile.svg
@@ -23,4 +23,4 @@ maintainers:
   name: mariadb-pieterhumphrey
 name: mariadb-operator
 type: application
-version: 0.33.0
+version: 0.34.0
