--- a/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/values.yaml
+++ b/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/values.yaml
@@ -174,6 +174,12 @@ sessionServer:
   #Valid values: ClusterIP, Headless, NodePort, LoadBalancer
   serviceType: LoadBalancer
 
+  # if enabled, sessionServer.publicIP variable should be set to the host e.g. runner1.example.com
+  ingress:
+    enabled: false
+    className: ""
+    annotations: {}
+
 ## For RBAC support:
 rbac:
   ## Specifies whether a Role and RoleBinding should be created
@@ -674,9 +680,12 @@ podAnnotations: {}
 
 ## Labels to be added to manager pod
 ##
+## Supports templating
 podLabels: {}
   # Example:
   # owner.team: <my_cool_team>
+  # owner.team: "{{ .Values.team }}"
+  # tags.{{ .Values.tag }}/env: "{{ .Values.environment }}"
 
 ## HPA support for custom metrics:
 ## This section enables runners to autoscale based on defined custom metrics.
