[CI] Helm Chart Update keda

--- a/argocd-helm-charts/keda/charts/keda/templates/crds/crd-cloudeventsources.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/crds/crd-cloudeventsources.yaml
@@ -94,6 +94,10 @@ spec:
                       enum:
                       - keda.scaledobject.ready.v1
                       - keda.scaledobject.failed.v1
+                      - keda.scaledobject.removed.v1
+                      - keda.scaledjob.ready.v1
+                      - keda.scaledjob.failed.v1
+                      - keda.scaledjob.removed.v1
                       type: string
                     type: array
                   includedEventTypes:
@@ -103,6 +107,10 @@ spec:
                       enum:
                       - keda.scaledobject.ready.v1
                       - keda.scaledobject.failed.v1
+                      - keda.scaledobject.removed.v1
+                      - keda.scaledjob.ready.v1
+                      - keda.scaledjob.failed.v1
+                      - keda.scaledjob.removed.v1
                       type: string
                     type: array
                 type: object
