--- a/argocd-helm-charts/keda/charts/keda/Chart.yaml
+++ b/argocd-helm-charts/keda/charts/keda/Chart.yaml
@@ -7,11 +7,11 @@ kubeVersion: '>=v1.23.0-0'
 maintainers:
 - email: jorge_turrado@hotmail.es
   name: Jorge Turrado
-- email: kerkhove.tom@gmail.com
-  name: Tom Kerkhove
 - email: zbynek@kedify.io
   name: Zbynek Roubalik
+- email: jan@kedify.io
+  name: Jan Wozniak
 name: keda
 sources:
 - https://github.com/kedacore/keda
-version: 2.15.1
+version: 2.15.2
