--- a/argocd-helm-charts/keda/charts/keda/templates/metrics-server/clusterrolebinding.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/metrics-server/clusterrolebinding.yaml
@@ -31,7 +31,7 @@ metadata:
     app.kubernetes.io/name: {{ .Values.operator.name }}-auth-reader
     {{- include "keda.labels" . | indent 4 }}
   name: {{ .Values.operator.name }}-auth-reader
-  namespace: kube-system
+  namespace: {{ .Values.rbac.controlPlaneServiceAccountsNamespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -59,5 +59,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: horizontal-pod-autoscaler
-  namespace: kube-system
+  namespace: {{ .Values.rbac.controlPlaneServiceAccountsNamespace }}
 {{- end -}}
