--- a/argocd-helm-charts/keda/charts/keda/values.yaml
+++ b/argocd-helm-charts/keda/charts/keda/values.yaml
@@ -163,7 +163,6 @@ metricsServer:
     successThreshold: 1
 
 webhooks:
-  # -- Enable admission webhooks (this feature option will be removed in v2.12)
   enabled: true
   # -- Port number to use for KEDA admission webhooks. Default is 9443.
   port: ""
@@ -277,6 +276,10 @@ rbac:
 
   # -- Whether RBAC for configured CRDs that can have a `scale` subresource should be created
   enabledCustomScaledRefKinds: true
+  # -- Customize the namespace of k8s metrics-server deployment
+  # This could also be achieved by the Kubernetes control plane manager flag --use-service-account-credentials:
+  # [docs](https://kubernetes.io/docs/reference/command-line-tools-reference/kube-controller-manager/)
+  controlPlaneServiceAccountsNamespace: kube-system
   # -- List of custom resources that support the `scale` subresource and can be referenced by `scaledobject.spec.scaleTargetRef`.
   # The feature needs to be also enabled by `enabledCustomScaledRefKinds`.
   # If left empty, RBAC for `apiGroups: *` and `resources: *, */scale` will be created
