--- a/argocd-helm-charts/cert-manager/templates/ingressclass.yaml
+++ b/argocd-helm-charts/cert-manager/templates/ingressclass.yaml
@@ -1,6 +1,10 @@
+{{- range $k, $v := .Values.issuer.solvers -}}
+{{- if and (eq (toString $v.type) "http") (eq $v.http01.ingress.ingressClassName "traefik-cert-manager") }}
 apiVersion: networking.k8s.io/v1
 kind: IngressClass
 metadata:
   name: traefik-cert-manager
 spec:
   controller: traefik.io/ingress-controller
+{{- end }}
+{{- end }}
