--- a/argocd-helm-charts/prometheus-linuxaid/values.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/values.yaml
@@ -12,6 +12,14 @@ prometheus:
     requests:
       cpu: 600m
       memory: 2Gi
+  # in prometheus pods that takes some recovery time due to large number of WALs we need to increase the probe time.
+  # ref. - https://github.com/prometheus-operator/prometheus-operator/blob/378d36df448366414de53a66a64020cd053002b7/pkg/prometheus/statefulset.go#L641-L643
+  startupProbe:
+    failureThreshold: 240
+  livenessProbe:
+    failureThreshold: 240
+  readinessProbe:
+    failureThreshold: 240
 grafana:
   server: graphs.obmondo.com
   version: 11.1.4
