Support for changing memory requests and limits for PostgreSQL in KeycloakX Helm Chart
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/keycloakx/templates/postgresql-zalando.yaml
+++ b/argocd-helm-charts/keycloakx/templates/postgresql-zalando.yaml
@@ -12,6 +12,11 @@ spec:
   enableMasterLoadBalancer: false
   enableLogicalBackup: {{ .Values.postgresql.enableLogicalBackup }}
   numberOfInstances: {{ ((.Values.postgresql).instance) | default 1 }}
+  resources:
+    requests:
+      memory: {{ ((((.Values.postgresql).resources).requests).memory) | default "100Mi" }}
+    limits:
+      memory: {{ ((((.Values.postgresql).resources).requests).memory) | default "500Mi" }}
   postgresql:
     version: "12"
   teamId: keycloakx
