--- a/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/templates/deployments/auth.yaml
+++ b/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/templates/deployments/auth.yaml
@@ -76,14 +76,14 @@ spec:
               valueFrom:
                 resourceFieldRef:
                   resource: limits.cpu
-                  divisor: 1
+                  divisor: "1"
             {{- end }}
             {{- if .Values.auth.containers.resources.limits.memory }}
             - name: GOMEMLIMIT
               valueFrom:
                 resourceFieldRef:
                   resource: limits.memory
-                  divisor: 1
+                  divisor: "1"
             {{- end }}
 
           {{- with .Values.auth.containers.env }}
