--- a/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/templates/deployments/metrics-scraper.yaml
+++ b/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/templates/deployments/metrics-scraper.yaml
@@ -68,14 +68,14 @@ spec:
               valueFrom:
                 resourceFieldRef:
                   resource: limits.cpu
-                  divisor: 1
+                  divisor: "1"
             {{- end }}
             {{- if .Values.metricsScraper.containers.resources.limits.memory }}
             - name: GOMEMLIMIT
               valueFrom:
                 resourceFieldRef:
                   resource: limits.memory
-                  divisor: 1
+                  divisor: "1"
             {{- end }}
 
           {{- with .Values.metricsScraper.containers.env }}
