--- a/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/templates/deployments/web.yaml
+++ b/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/templates/deployments/web.yaml
@@ -70,14 +70,14 @@ spec:
               valueFrom:
                 resourceFieldRef:
                   resource: limits.cpu
-                  divisor: 1
+                  divisor: "1"
             {{- end }}
             {{- if .Values.web.containers.resources.limits.memory }}
             - name: GOMEMLIMIT
               valueFrom:
                 resourceFieldRef:
                   resource: limits.memory
-                  divisor: 1
+                  divisor: "1"
             {{- end }}
 
           {{- with .Values.web.containers.env }}
