--- a/.gitea/Dockerfile
+++ b/.gitea/Dockerfile
@@ -9,12 +9,14 @@ WORKDIR /tmp
 
 RUN apt-get update                                          \
     && apt-get install software-properties-common -y        \
+    && add-apt-repository ppa:rmescandon/yq -y              \
     && add-apt-repository ppa:longsleep/golang-backports -y \
     && apt-get update                                       \
     && apt-get install -y                                   \
         shellcheck                                          \
         prometheus                                          \
-        golang-1.19
+        golang-1.19                                         \
+        yq                                                          
 
 # jsonnet
 RUN go install github.com/jsonnet-bundler/jsonnet-bundler/cmd/jb@v0.5.1
@@ -30,3 +32,4 @@ RUN ./get_helm.sh --version v3.9.1
 # OPA
 RUN wget https://github.com/open-policy-agent/opa/releases/download/v0.43.0/opa_linux_amd64_static -O /usr/local/bin/opa
 RUN chmod +x /usr/local/bin/opa
+
