--- a/.gitea/workflows/container-image.yaml
+++ b/.gitea/workflows/container-image.yaml
@@ -3,7 +3,7 @@ name: kubeaid CI image
 "on":
   push:
     branches:
-      - master
+      - add-config-tag-updatescript
     paths:
       - '.gitea/Dockerfile'
 
