feat: added a support for updating argocd template file with correct tag and added doc as well

--- a/.gitea/Dockerfile
+++ b/.gitea/Dockerfile
@@ -1,4 +1,4 @@
-FROM harbor.obmondo.com/obmondo/dockerfiles/jammy-generic-build@sha256:2145c7adffd30bc0d38f32c2b814fd60a537c7886a749e799daa9848707fd51f
+FROM harbor.obmondo.com/obmondo/jammy-generic-build@sha256:0d656390da967ca7e6cbcef3de1f9c1b560b3be5a269d988ab59f7d4d2270ce2
 
 LABEL org.opencontainers.image.authors="Ashish Jaiswal <ashish@enableit.dk>"
 
@@ -9,14 +9,12 @@ WORKDIR /tmp
 
 RUN apt-get update                                          \
     && apt-get install software-properties-common -y        \
-    && add-apt-repository ppa:rmescandon/yq -y              \
     && add-apt-repository ppa:longsleep/golang-backports -y \
     && apt-get update                                       \
     && apt-get install -y                                   \
         shellcheck                                          \
         prometheus                                          \
-        golang-1.19                                         \
-        yq                                                          
+        golang-1.19
 
 # jsonnet
 RUN go install github.com/jsonnet-bundler/jsonnet-bundler/cmd/jb@v0.5.1
@@ -33,6 +31,11 @@ RUN ./get_helm.sh --version v3.9.1
 RUN wget https://github.com/open-policy-agent/opa/releases/download/v0.43.0/opa_linux_amd64_static -O /usr/local/bin/opa
 RUN chmod +x /usr/local/bin/opa
 
-# tag script
-RUN curl -fsSL -o tag-update.sh https://raw.githubusercontent.com/Obmondo/kubeaid/refs/heads/master/bin/tag-update.sh
-RUN chmod +x tag-update.sh
+# YQ
+RUN wget https://github.com/mikefarah/yq/releases/download/v4.44.3/yq_linux_amd64 -O /usr/local/bin/yq
+RUN chmod +x /usr/local/bin/yq
+
+# Add kubeaid argocd app update script
+COPY bin/update-kubeaid-argocd-app.sh /usr/bin/update-kubeaid-argocd-app.sh
+
+WORKDIR /workspace
